--- a/3.Hindi_Summarization_Model_Scheduled_Sampling.ipynb
+++ b/3.Hindi_Summarization_Model_Scheduled_Sampling.ipynb
@@ -43,7 +43,7 @@
         "\n",
         "\n",
         "```\n",
-        "@article{keneshloo2018deep,\n",
+        "@article{HindiTextSummarization,\n",
         " title={Deep Reinforcement Learning For Sequence to Sequence Models},\n",
         "}\n",
         "```\n",
